--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hairstonsolutions.trading</groupId>
     <artifactId>hitbtc-client</artifactId>
-    <version>0.7.5+buid-0</version>
+    <version>0.7.6+build-0</version>
 
     <build>
         <plugins>
