--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hairstonsolutions.trading</groupId>
     <artifactId>hitbtc-client</artifactId>
-    <version>0.8.2-build-0</version>
+    <version>0.8.2-build-2</version>
 
     <build>
         <plugins>
@@ -14,8 +14,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -55,7 +55,7 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
+            <id>github2</id>
             <name>GitHubOWNERApacheMavenPackages</name>
             <url>https://maven.pkg.github.com/HairstonSolutions/hitbtc-java-client</url>
         </repository>
