--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hairstonsolutions.trading</groupId>
     <artifactId>hitbtc-client</artifactId>
-    <version>0.10.0</version>
+    <version>0.11.0</version>
 
     <build>
         <plugins>
@@ -19,11 +19,18 @@
                 </configuration>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>com.google.cloud.artifactregistry</groupId>
+                <artifactId>artifactregistry-maven-wagon</artifactId>
+                <version>2.1.0</version>
+            </extension>
+        </extensions>
     </build>
 
     <properties>
         <java.version>11</java.version>
-        <spring.version>5.2.8.RELEASE</spring.version>
+        <spring.version>5.3.22</spring.version>
     </properties>
 
     <dependencies>
@@ -36,7 +43,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.0</version>
+            <version>2.12.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -48,7 +55,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -59,11 +66,37 @@
         </dependency>
     </dependencies>
 
-    <distributionManagement>
+    <repositories>
         <repository>
-            <id>github2</id>
-            <name>GitHubOWNERApacheMavenPackages</name>
-            <url>https://maven.pkg.github.com/HairstonSolutions/hitbtc-java-client</url>
+            <id>hs-pub-artifact-registry</id>
+            <url>artifactregistry://us-east4-maven.pkg.dev/hsolutions-pub/mvn-pub</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>hs-artifact-registry</id>
+            <url>artifactregistry://us-east4-maven.pkg.dev/hsolutions-build-deploy/mvn-repo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>hs-artifact-registry</id>
+            <url>artifactregistry://us-east4-maven.pkg.dev/hsolutions-build-deploy/mvn-repo</url>
+        </snapshotRepository>
+        <repository>
+            <id>hs-pub-artifact-registry</id>
+            <url>artifactregistry://us-east4-maven.pkg.dev/hsolutions-pub/mvn-pub</url>
         </repository>
     </distributionManagement>
 
